--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "moment": "^2.18.1",
     "react": "16.0.0-alpha.6",
-    "react-native": "0.43.3",
-    "react-native-button": "^1.8.2",
-    "react-native-gifted-spinner": "^0.1.0"
+    "react-native": "0.43.3"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
