--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.6",
-    "react-native": "0.43.3"
+    "react-native": "0.43.3",
+    "react-native-infinite-scroll-view": "^0.4.2"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
